[gd_scene load_steps=6 format=2]

[ext_resource path="res://GUI/assets/coinRock/coinRock_flips.png" type="Texture" id=1]
[ext_resource path="res://GUI/GUI.gd" type="Script" id=2]
[ext_resource path="res://GUI/assets/coinRock/coinrock.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Coinflip"
length = 0.32
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("ControlCoin/Coin/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.02, 0.04, 0.06, 0.08, 0.1, 0.12, 0.14, 0.16, 0.18, 0.2, 0.22, 0.24, 0.26, 0.28, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=2]
length = 0.001

[node name="GUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="WoodCounter" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -128.0
margin_top = -40.0
margin_right = -39.0
margin_bottom = -18.0
alignment = 1
__meta__ = {
"_edit_group_": true
}

[node name="Wood" type="Label" parent="WoodCounter"]
margin_left = 20.0
margin_top = 4.0
margin_right = 57.0
margin_bottom = 18.0
text = "Wood"
align = 1

[node name="WoodAmount" type="Label" parent="WoodCounter"]
margin_left = 61.0
margin_top = 4.0
margin_right = 69.0
margin_bottom = 18.0
text = "0"

[node name="RockCounter" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.967
anchor_right = 0.5
anchor_bottom = 0.967
margin_left = -128.0
margin_top = -68.2
margin_right = -39.0
margin_bottom = -44.2
alignment = 1
__meta__ = {
"_edit_group_": true
}

[node name="Rock" type="Label" parent="RockCounter"]
margin_left = 20.0
margin_top = 5.0
margin_right = 57.0
margin_bottom = 19.0
text = "Rocks"
align = 1

[node name="RockAmount" type="Label" parent="RockCounter"]
margin_left = 61.0
margin_top = 5.0
margin_right = 69.0
margin_bottom = 19.0
text = "0"

[node name="ControlCoin" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -32.0
margin_top = -88.0
margin_right = 8.0
margin_bottom = -48.0

[node name="Coin" type="Node2D" parent="ControlCoin"]

[node name="CoinAnimation" type="AnimationPlayer" parent="ControlCoin/Coin"]
root_node = NodePath("../../..")
anims/Coinflip = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="ControlCoin/Coin"]
position = Vector2( 32, 32 )
z_index = 100
texture = ExtResource( 1 )
hframes = 8
region_rect = Rect2( 0, 0, 64, 64 )

[node name="FlipCoin" type="TextureButton" parent="ControlCoin"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 44.0
margin_bottom = 44.0
texture_normal = ExtResource( 3 )

[node name="WoodUpgradeBox" type="HBoxContainer" parent="."]
margin_left = 576.0
margin_top = 560.0
margin_right = 740.0
margin_bottom = 584.0

[node name="WoodButton" type="Button" parent="WoodUpgradeBox"]
margin_right = 20.0
margin_bottom = 24.0
text = "+"

[node name="WoodUpgrade" type="Label" parent="WoodUpgradeBox"]
margin_left = 24.0
margin_top = 5.0
margin_right = 144.0
margin_bottom = 19.0
text = "Upgrade wood for :"

[node name="WoodPrice" type="Label" parent="WoodUpgradeBox"]
margin_left = 148.0
margin_top = 5.0
margin_right = 164.0
margin_bottom = 19.0
text = "10"

[node name="RockUpgradeBox" type="HBoxContainer" parent="."]
margin_left = 576.0
margin_top = 512.0
margin_right = 740.0
margin_bottom = 536.0

[node name="RockButton" type="Button" parent="RockUpgradeBox"]
margin_right = 20.0
margin_bottom = 24.0
text = "+"

[node name="RockUpgrade" type="Label" parent="RockUpgradeBox"]
margin_left = 24.0
margin_top = 5.0
margin_right = 144.0
margin_bottom = 19.0
text = "Upgrade rocks for :"

[node name="RockPrice" type="Label" parent="RockUpgradeBox"]
margin_left = 148.0
margin_top = 5.0
margin_right = 164.0
margin_bottom = 19.0
text = "10"

[connection signal="button_up" from="ControlCoin/FlipCoin" to="." method="_on_FlipCoin_button_up"]
[connection signal="button_up" from="WoodUpgradeBox/WoodButton" to="." method="_on_WoodButton_button_up"]
[connection signal="button_up" from="RockUpgradeBox/RockButton" to="." method="_on_RockButton_button_up"]
